# 9-4-Serial-Receive-Text-Package

./: .clangd  Project+Target_1.cbuild.yml  Project+Target_1.cprj  Project.cbuild-idx.yml  Project.cproject.yaml  Project.csolution.yaml  Project.uvguix.Tony_Huang  Project.uvoptx  Project.uvprojx
Hardware/: Key.c  OLED.c  Serial.c  Serial.h
Listings/: Project.map  startup_stm32f10x_md.lst
Objects/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  adc.d  dma.d  key.d  led.d  main.d  oled.d  serial.d
RTE/_Target_1/: RTE_Components.h
User/: main.c
tmp/Project/Target_1/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
